# RAG

MCP/: README.md  client.ts  index.ts  package.json
MCPPIYUSHSIR/: README.md  index.ts  package.json
RAG1/: chat.py  compose.yaml  index.py  requirement.txt
fastaouollama/: requirements.txt  server.py
graphMemory/: main.py  requirements.txt
krishSirAgenticAi/: main.py  pyproject.toml  requirements.txt
langgraph/: chat.py  chat2.py  chatcheckpoint.py  compose.yaml  requirements.txt
mcpServer/: client.py  mathsserver.py  pyproject.toml  requirements.txt  weather.py
mcpYT/: main.py  pyproject.toml  requirements.txt
mcpYT/server/: weather.py
memoryInAgent/: main.py  requirements.txt
multiAgent/: main.py
rag2/: main.py  requirements.txt  run_worker.sh  server.py
rag2/queues/: client.py  worker.py
section15/: requirements.txt
section15/hello/: main.py
section16/: chai-of-thought.py  fewshot.py  personabasedprompting.py  zeroShotPrompting.py
section16/hello/: main.py
voiceAgent/: main.py  requirements.txt
weatherAgent/: agent.py  main.py
