[project]
name = "krishsiragenticai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernal",
    "langchain>=1.3.14",
    "langchain-google-genai>=4.3.1",
    "langchain-groq>=1.1.3",
    "langchain-openai>=1.4.0",
    "python-dotenv>=1.2.2",
]
